@@ -1,4 +1,4 @@
-package elice04_pikacharger.pikacharger.security;
+package elice04_pikacharger.pikacharger.security.jwt;
 
 
 import lombok.Getter;
@@ -9,6 +9,8 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.Collection;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Getter
 @RequiredArgsConstructor
@@ -22,10 +24,12 @@ public class MyTokenAuthentication implements Authentication {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return payload.getRoles().stream()
-                .map(SimpleGrantedAuthority::new)
-                .toList();
+        return Optional.ofNullable(payload.getRole()) // Role이 null이 아닌지 확인
+                .stream()
+                .map(role -> new SimpleGrantedAuthority(role.name()))
+                .collect(Collectors.toList());
     }
+
 
     @Override
     public Object getCredentials() {return null;}
